[tool.poetry]
name = "kbrick"
version = "0.1.0"
description = ""
authors = ["Norman Shipman <norman@nshipman.io>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
kbrick="kbrick.kbrick:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
